# resize_new

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE.txt  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/resize_new/: __init__.py  compare_and_resize.py  main.py  skeleton.py
tests/: conftest.py  test_compare_and_resize.py  test_main.py  test_skeleton.py
